Fix z-index of anchors for #1940

--- a/src/app/assets/stylesheets/app.scss
+++ b/src/app/assets/stylesheets/app.scss
@@ -173,6 +173,7 @@ a.ptc {
   margin-top: -68px;
   position: relative;
   display: block;
+  z-index:-1000;
 }
 
 h1, h2, h3, h4, h5, h6 {
